--- a/template.yaml
+++ b/template.yaml
@@ -5,6 +5,15 @@ Conditions:
       - !Ref 'CloudwatchMetricName'
       - ''
 Description: Monitors a key in an api call for a value and prints to cloudwatch logs
+Outputs:
+  ImageLink:
+    Condition: MakeMetric
+    Description: Link to download metric image.
+    Value: !Join
+      - ''
+      - - https://s3.amazonaws.com/
+        - !Ref 'S3Bucket'
+        - /image.png
 Parameters:
   CloudwatchMetricName:
     Default: ''
@@ -37,8 +46,8 @@ Resources:
             - '            s3 = boto3.resource("s3")'
             - '            cw = boto3.client("cloudwatch")'
             - '            response = cw.get_metric_widget_image(MetricWidget=os.environ["json"])'
-            - '            object = s3.Object(os.environ["bucket"], "image.png")'
-            - '            object.put(Body=response["MetricWidgetImage"])'
+            - '            s3.Bucket(os.environ["bucket"]).put_object(Key="image.png",
+              Body=response["MetricWidgetImage"], ACL="public-read")'
             - '    except Exception as e:'
             - '        print(str(e))'
             - '    return'
@@ -117,6 +126,8 @@ Resources:
         Statement:
           - Action:
               - s3:PutObject
+              - s3:PutObjectAcl
+              - s3:GetObjectAcl
             Effect: Allow
             Resource:
               - !Join
